src/snapshots/ruff__linter__tests__D208_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoOverIndentation
  location:
    row: 247
    column: 0
  end_location:
    row: 245
    column: 11
  fix:
    patch:
      content: "    "
      location:
        row: 247
        column: 0
      end_location:
        row: 247
        column: 7
    applied: false
- kind: NoOverIndentation
  location:
    row: 259
    column: 0
  end_location:
    row: 257
    column: 12
  fix:
    patch:
      content: "    "
      location:
        row: 259
        column: 0
      end_location:
        row: 259
        column: 8
    applied: false
- kind: NoOverIndentation
  location:
    row: 267
    column: 0
  end_location:
    row: 265
    column: 11
  fix:
    patch:
      content: "    "
      location:
        row: 267
        column: 0
      end_location:
        row: 267
        column: 8
    applied: false

