src/snapshots/ruff__linter__tests__D209_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NewLineAfterLastParagraph
  location:
    row: 281
    column: 4
  end_location:
    row: 283
    column: 19
  fix:
    patch:
      content: "\n    "
      location:
        row: 283
        column: 16
      end_location:
        row: 283
        column: 16

